# fite-gpt2

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  bullets.ipynb  index.html  notebook.ipynb  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  results.ipynb  results.json  setup.py  snowpack.config.mjs  tsconfig.json  vite.config.ts  vocab.json
api/: main.py  pipeline.py
client/: components.tsx  context.tsx  fite.tsx  hooks.tsx  index.tsx  style.css
junk/: taf.py  typing.py
junk/api/: main.py  util.py
junk/model/: typing.py
model/: TAF.py  __init__.py  __main__.py  _dataset_builder.py  _pipeline.py  _tokens.py  berttoken.py  build.py  core.py  dataset.py  evaluate.py  gpt2.py  typing.py  util.py
notebooks/: parameters.ipynb  typed-dict.ipynb
public/: index.html
server/: main.py
src/fite/: _argparse.py  _enum.py  _typing.py  api.py  datasets.py  enum.py  pipeline.py  regex.py  typing.py  util.py
src/fite/train/: __init__.py  __main__.py  datasets.py  evaluate.py  filesystem.py  fine_tune.py  results.py
store/: training-taf-data.jsonl
store/data/: taf-training-data.txt
types/: static.d.ts
