[build-system]

requires = [
    "setuptools>=58.2.0", 
    "wheel",
]   

build-backend = "setuptools.build_meta"

[project]
name = "fite"
version = "0.0.1"
description = "Forecaster Intergrated TAF Environment; a Python package for autocompletion of Terminal Aerodrome Forecasts."
authors = [
    {name = "Jason Leaver", email = "jason.leaver@us.af.mil"},
]
license = {file = 'LICENSE'}
requires-python = ">=3.10"
dependencies = [
    "numpy==1.23.5",
    "pandas==1.5.1",
    "torch==1.13.0",
    "datasets==2.7.0",
    "tokenizers==0.13.2",
    "transformers==4.24.0",
    "pyarrow==10.0.0",
    "fastapi==0.87.0",
    "toml==0.10.2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]
[tool.fite]
root-path = "store/"

[[tool.fite.models]]
model-name = "gpt2-taf-base1"
description = "A GPT-2 model trained on TAFs."
additional-tokens = ["\u0120TAF", "\u0120BECMG", "\u0120TEMPO"]
additional-special-tokens = ["\u0120LAST", "\u0120NO", "\u0120AMDS", "\u0120RMK", "\u0120COR"]
prompt-examples = [
    "TAF KBLV 020600 0200/0306 18010KT 8000 -SHRA OVC020 QNH2995INS\nTEMPO 0200/0206 5000",
    "TAF KGTB 251700Z 2517/2623 26012G20KT",
    "TAF KGTB 251700Z 2517/2623 26012G20KT 9999 OVC008 QNH2970INS\nBECMG 2519/2520 27009KT 9999 SCT009 OVC015 QNH2976INS\nBECMG 2610/2611 VRB06KT 9999 BKN015 OVC025 QNH2991INS",
    "TAF KMTC 252000Z 2520/2702 29012G20KT 9999 SKC",
    "TAF PASY 251400Z 2514/2620 11006KT 9999 FEW030 FEW045 SCT100 QNH3002INS\nBECMG 2519/2520",
]

[[tool.fite.models]]
model-name = "gpt2-metar-base1"
description = "A GPT-2 model trained on METARs."
additional-tokens = ["\u0120TAF", "\u0120BECMG", "\u0120TEMPO"]
additional-special-tokens = ["\u0120LAST", "\u0120NO", "\u0120AMDS", "\u0120RMK"]
prompt-examples = []

[tool.setuptools]
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html
include-package-data = true
[tool.setuptools.packages.find]
where = ["src","store/models/gpt2-taf-0.1.0"]
[tool.setuptools.package-data]
mypkg = ["*"]
